--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-handlebars": "^3.0.0",
     "morgan": "~1.7.0",
     "nodemailer": "^4.0.1",
     "pug": "~2.0.0-beta6",
-    "sendgrid": "^5.1.0",
     "serve-favicon": "~2.3.0"
   }
 }
